test/typeerrors/Heuristics/UnifierList.hs
test x = [x, "hello", 13, x]
